--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,23 +1,20 @@
 version: "2"
 checks:
+  file-lines:
+    config:
+      threshold: 10
   argument-count:
     config:
       threshold: 3
-  complex-logic:
+  method-complexity:
     config:
-      threshold: 2
+      threshold: 50
   method-count:
     config:
       threshold: 20
   method-lines:
     config:
-      threshold: 10
-  nested-control-flow:
-    config:
-      threshold: 4
-  return-statements:
-    config:
-      threshold: 4
+      threshold: 25
 
 exclude_patterns:
   - "tests/"
